draft all definitions fix #35 fix #36 fix #39 fix #40 fix #46

--- a/references.bib
+++ b/references.bib
@@ -1,6 +1,51 @@
 
 % The entry below contains non-ASCII chars that could not be converted
 % to a LaTeX equivalent.
+
+@ARTICLE{Fall2007-ku,
+  title     = "Spatial Graphs: Principles and Applications for Habitat
+               Connectivity",
+  author    = "Fall, Andrew and Fortin, Marie-Jos{\'e}e and Manseau, Micheline
+               and O'Brien, Dan",
+  abstract  = "ABSTRACTWell-founded methods to assess habitat connectivity are
+               essential to inform land management decisions that include
+               conservation and restoration goals. Indeed, to be able to
+               develop a conservation plan that maintains animal movement
+               through a fragmented landscape, spatial locations of habitat and
+               paths among them need to be represented. Graph-based approaches
+               have been proposed to determine paths among habitats at various
+               scales and dispersal movement distances, and balance data
+               requirements with information content. Conventional graphs,
+               however, do not explicitly maintain geographic reference,
+               reducing communication capacity and utility of other geo-spatial
+               information. We present spatial graphs as a unifying theory for
+               applying graph-based methods in a geographic context. Spatial
+               graphs integrate a geometric reference system that ties patches
+               and paths to specific spatial locations and spatial dimensions.
+               Arguably, the complete graph, with paths between every pair of
+               patches, may be one of the most relevant graphs from an
+               ecosystem perspective, but it poses challenges to compute,
+               process and visualize. We developed Minimum Planar Graphs as a
+               spatial generalization of Delaunay triangulations to provide a
+               reasonable approximation of complete graphs that facilitates
+               visualization and comprehension of the network of connections
+               across landscapes. If, as some authors have suggested, the
+               minimum spanning tree identifies the connectivity ``backbone''
+               of a landscape, then the Minimum Planar Graph identifies the
+               connectivity ``network''. We applied spatial graphs, and in
+               particular the Minimum Planar Graph, to analyze woodland caribou
+               habitat in Manitoba, Canada to support the establishment of a
+               national park.",
+  journal   = "Ecosystems",
+  publisher = "Springer-Verlag",
+  volume    =  10,
+  number    =  3,
+  pages     = "448--461",
+  month     =  apr,
+  year      =  2007,
+  language  = "en"
+}
+
 @ARTICLE{Daigle2017-qu,
   title    = "An adaptable toolkit to assess commercial fishery costs and
               benefits related to marine protected area network design",
