--- a/glossary.Rmd
+++ b/glossary.Rmd
@@ -3,7 +3,6 @@ title: "Glossary"
 output:
   html_document:
     keep_md: yes
-    number_sections: yes
     toc: yes
     toc_float: yes
 bibliography: references.bib
@@ -20,64 +19,28 @@ library(RColorBrewer)
 library(d3Network)
 ```
 
-
-
-
 # Boundary Definitions
 
-Alternative `boundary.dat` calculations
+In Marxan, the boundary definitions (*i.e.* `boundary.dat`) in conjunction with the Boundary Length Modifier help achieve a solution that has a reasonable edge to area ratio. Typically these boundaries are numerically defined as the physical length of the shared shared boundary between planning units. Marxan Connect allows users to use connectivity data as boundary definitions (see @Beger2010-ir). This engourages the selection of connected networks of protected areas and minimizes the effective "edge" of the network based on movement information.
+
+Alternatively (or in conjuction), connectivity may be incorporated into the Marxan analysis by using [Conservation Features](glossary.html#conservation_feature).
 
 ## Connectivity as Boundary
 
-description
+Incorporates the connectivity data into the boundary definitions (*i.e.* `boundary.dat`; see @Beger2010-ir). 
 
 ## Minimum Planar Graph
 
-description
+Incorporates the connectivity data into the boundary definitions (*i.e.* `boundary.dat`) after transforming into a minimum planar graph (see @Fall2007-ku).
 
-# Connectivity
-
-description (with units)
-
-## Connectivity Categories
-
-### Demographic Connectivity
-
-description
-
-### Genetic Connectivity
-
-description
-
-### Landscape Connectivity
-
-description
-
-## Connectivity Types
-
-Each connectivity category has multiple types of data that can be used by Marxan with Connectivity:
-
-### Settlement
-
-description
-
-### Local Immigration
-
-description
-
-### Dispersal Flux
-
-description
-
-### Migration
-
-description
 
 ## Data Formats
 
-Marxan with Connectivity can accept 2 types of connectivity data, Matrices and Lists:
+Marxan Connect can accept different formats of connectivity data:
 
 ### Connectivity Matrix
+
+We use a broad definition of connectivity matrix. The first column contains the donor site IDs and the recipient site IDs are in the first row. 
 
 |     |   1   |   2   |   3   |   4   |  ...  |
 |:---:|:-----:|:-----:|:-----:|:-----:|:-----:|
@@ -87,7 +50,11 @@ Marxan with Connectivity can accept 2 types of connectivity data, Matrices and L
 |**4**| 0.022 | 0.017 | 0.001 |  0.2  |  ...  |
 | ... |  ...  |  ...  |  ...  |  ...  |  ...  |
 
-### Connectivity List
+The cells contain information about the connectivity between those sites, but their exact value depends on whether the connectivity matrix is a [Probability](glossary.html#probability), a [Migration](glossary.html#migration), or a [Flow](glossary.html#flow) matrix
+
+### Edge List
+
+The first column contains the donor site IDs and second column contains the recipient site IDs. 
 
 | id1 | id2 | value |
 |:---:|:---:|:-----:|
@@ -97,7 +64,11 @@ Marxan with Connectivity can accept 2 types of connectivity data, Matrices and L
 |  1  |  4  |  0.01 |
 | ... | ... |  ...  |
 
-### Connectivity List with Time
+The value column contain information about the connectivity between those sites, but their exact value depends on whether the edge list is a [Probability](glossary.html#probability), a [Migration](glossary.html#migration), or a [Flow](glossary.html#flow) edge list
+
+### Edge List with Time
+
+The first column contains time, the second column contains the donor site IDs and the third column contains the recipient site IDs. 
 
 | time | id1 | id2 | value |
 |:----:|:---:|:---:|:-----:|
@@ -107,13 +78,63 @@ Marxan with Connectivity can accept 2 types of connectivity data, Matrices and L
 |   1  |  1  |  4  |  0.01 |
 |  ... | ... | ... |  ...  |
 
+
+The value column contain information about the connectivity between those sites at that particular time, but their exact value depends on whether the edge list is a [Probability](glossary.html#probability), a [Migration](glossary.html#migration), or a [Flow](glossary.html#flow) edge list
+## Data Types
+
+Marxan Connect can accept different types of connectivity data:
+
+### Flow
+
+Flow represents the amount of nutrients, energy, or organisms that move from one planning unit to another. 
+
+Example Flow Matrix:
+
+|     |   1   |   2   |   3   |   4   |  ...  |
+|:---:|:-----:|:-----:|:-----:|:-----:|:-----:|
+|**1**|  1  |  2 | 5 |  1 |  ...  |
+|**2**| 6 |  2  | 7 | 9 |  ...  |
+|**3**|  1 | 3 |  3 |  2 |  ...  |
+|**4**| 22 | 17 | 3 |  2  |  ...  |
+| ... |  ...  |  ...  |  ...  |  ...  |  ...  |
+
+### Migration
+
+Migration represents the proportion of of nutrients, energy, or organisms which arrived in the recipient planning unit originated in the donor planning unit. Columns sum to 1.
+
+Example Flow Matrix:
+
+|     |   1   |   2   |   3   |   4   |  ...  |
+|:---:|:-----:|:-----:|:-----:|:-----:|:-----:|
+|**1**|  0.1  |  0.02 | 0.005 |  0.01 |  ...  |
+|**2**| 0.006 |  0.2  | 0.007 | 0.009 |  ...  |
+|**3**|  0.01 | 0.003 |  0.25 |  0.02 |  ...  |
+|**4**| 0.022 | 0.017 | 0.001 |  0.2  |  ...  |
+| ... |  ...  |  ...  |  ...  |  ...  |  ...  |
+
+### Probability
+
+Probability represents the proportion of of nutrients, energy, or organisms produced in the donor planning unit which move to the recipient plannint unit. If there is no mortality, then rows sum to 1. 
+
+Example Probability Matrix:
+
+|     |   1   |   2   |   3   |   4   |  ...  |
+|:---:|:-----:|:-----:|:-----:|:-----:|:-----:|
+|**1**|  0.1  |  0.02 | 0.005 |  0.01 |  ...  |
+|**2**| 0.006 |  0.2  | 0.007 | 0.009 |  ...  |
+|**3**|  0.01 | 0.003 |  0.25 |  0.02 |  ...  |
+|**4**| 0.022 | 0.017 | 0.001 |  0.2  |  ...  |
+| ... |  ...  |  ...  |  ...  |  ...  |  ...  |
+
 # Conservation Feature
 
-description
+Marxan Connect can calculate various connectivity metrics that represent the process of ecological connectivity (e.g. centrality, outflow). These metrics can be used as conservation features in Marxan. 
+
+Alternatively (or in conjuction), connectivity may be incorporated into the Marxan analysis by using [Boundary Definitions](glossary.html#boundary_definitions).
 
 ## In Degree
 
-**Definition**: The in degree indicates the number of connections into each planning unit.
+**Definition**: The in degree indicates the number of connections into each planning unit [@Minor2007-fb].
 
 **Objectives**: Prioritize for areas which receive input from many other planning units. These planning units may have higher biodiversity (ref) and population resilience (ref) as a result of the high in degree.
 
@@ -149,7 +170,7 @@ ggraph(as_tbl_graph(G),layout="fr") +
 
 ## Out Degree
 
-**Definition**: The out degree indicates the number of connections out of each planning unit.
+**Definition**: The out degree indicates the number of connections out of each planning unit [@Minor2007-fb].
 
 **Objectives**: Prioritize for areas which deliver output to many other planning units. These planning units may influence many other planning units.
 
@@ -185,7 +206,7 @@ ggraph(as_tbl_graph(G),layout="fr") +
 
 ## Betweenness Centrality 
 
-**Definition**: The betweeness centrality of a planning unit indicates the number of shortest paths between pairs of planning units that pass through that planning unit.
+**Definition**: The betweeness centrality of a planning unit indicates the number of shortest paths between pairs of planning units that pass through that planning unit. It ignores the weights of each connection [@Minor2007-fb].
 
 **Objectives**: Prioritize for areas which may act as crucial stepping stones.
 
@@ -221,11 +242,11 @@ ggraph(as_tbl_graph(G),layout="fr") +
 
 ## Eigenvector Centrality
 
-**Definition**: The eigenvector centrality indicates the influence that planning unit has on the network...
+**Definition**: The eigenvector centrality indicates the influence that planning unit has on the network [@DAloia2017-jp].
 
-**Objectives**: Prioritize for areas which ...
+**Objectives**: Prioritize for areas which are important to maintaining connectivity within the whole study area.
 
-**Equation**: The Eigenvector centrality of a planning unit ${v}$ (${EVC(v)}$) in a graph ${G:=(V,E)}$ with ${V}$ vertices (*i.e.* planning units) and ${E}$ edges (*i.e.* connections), let ${C=(c_{v,t})}$ be the connectivity matrix
+**Equation**: The Eigenvector centrality of a planning unit ${v}$ (${EVC(v)}$) in a graph ${G:=(V,E)}$ with ${V}$ vertices (*i.e.* planning units) and ${E}$ edges (*i.e.* connections), let ${C=(c_{v,t})}$ be the connectivity (migration) matrix
 
 $${\displaystyle EVC(v) =  \frac{1}{\lambda} \sum_{t \in G} c_{v,t}}$$
 
@@ -260,9 +281,9 @@ ggraph(as_tbl_graph(G),layout="fr") +
 
 **Definition**: The PageRank indicates the number and quality of connections to a planning unit to determine an estimated importance of the planning unit.
 
-**Objectives**: Prioritize for areas which receive input from many other planning units. These planning units may have higher biodiversity (ref) and population resilience (ref) as a result of the high in degree.
+**Objectives**: Prioritize for areas which are important to maintaining connectivity within the whole study area.
 
-**Equation**: The weighted PageRank of a planning unit ${v}$ (${PR(v)}$) in a graph ${G:=(V,E)}$ with ${V}$ vertices (*i.e.* planning units) and ${E}$ edges (*i.e.* connections), let ${C=(c_{v,t})}$ be the connectivity matrix.
+**Equation**: The weighted PageRank of a planning unit ${v}$ (${PR(v)}$) in a graph ${G:=(V,E)}$ with ${V}$ vertices (*i.e.* planning units) and ${E}$ edges (*i.e.* connections), let ${C=(c_{v,t})}$ be the connectivity (probability? migration?) matrix.
 
 $$\displaystyle PR(v) = 1-d+d\sum_{v\ne t\in V}PR(t)c_{v,t}c_{t,v}$$
 
@@ -295,11 +316,11 @@ ggraph(as_tbl_graph(G),layout="fr") +
 
 ## Self Recruitment
 
-**Definition**: The self recruitment indicates the proportion of locally produced recruits relative to all local recruits.
+**Definition**: The self recruitment indicates the proportion of locally produced recruits relative to all local recruits [@DAloia2017-jp].
 
-**Objectives**: Prioritize for areas which are relatively self-sustaining?
+**Objectives**: Prioritize for areas which are relatively self-sustaining.
 
-**Equation**: The self recruitment of a planning unit ${v}$ (${SR(v)}$) in a graph ${G:=(V,E)}$ with ${V}$ vertices (*i.e.* planning units) and ${E}$ edges (*i.e.* connections), let ${C=(c_{v,t})}$ be the connectivity matrix.
+**Equation**: The self recruitment of a planning unit ${v}$ (${SR(v)}$) in a graph ${G:=(V,E)}$ with ${V}$ vertices (*i.e.* planning units) and ${E}$ edges (*i.e.* connections), let ${C=(c_{v,t})}$ be the connectivity (probability) matrix.
 
 $${\displaystyle SR(v) = \frac{c_{v,v}N_v}{\sum_{t \in V}c_{t,v}N_v}}$$
 
@@ -334,9 +355,9 @@ ggraph(as_tbl_graph(G),layout="fr") +
 
 **Definition**: The local retention indicates the proportion of potential recruits produced in planning unit ${t}$ which are retained in in planning unit ${t}$. 
 
-**Objectives**: Prioritize for areas which are relatively self-sustaining?
+**Objectives**: Prioritize for areas which are relatively self-sustaining.
 
-**Equation**: The local retention of a planning unit ${v}$ (${LR(v)}$) in a graph ${G:=(V,E)}$ with ${V}$ vertices (*i.e.* planning units) and ${E}$ edges (*i.e.* connections), let ${C=(c_{v,t})}$ be the connectivity matrix.
+**Equation**: The local retention of a planning unit ${v}$ (${LR(v)}$) in a graph ${G:=(V,E)}$ with ${V}$ vertices (*i.e.* planning units) and ${E}$ edges (*i.e.* connections), let ${C=(c_{v,t})}$ be the connectivity (probability) matrix.
 
 $$\displaystyle LR(v) = c_{v,v}$$
 
@@ -365,13 +386,13 @@ ggraph(as_tbl_graph(G),layout="fr") +
     theme_void() + theme(legend.position="top",legend.box="vertical")
 ```
 
-## Influx
+## Inflow
 
-**Definition**: The influx indicates the amount of nutrients, energy, or organisms coming into a planning unit.
+**Definition**: The inflow indicates the amount of nutrients, energy, or organisms coming into a planning unit.
 
-**Objectives**: Prioritize for areas which are heavily subsidized by other planning units 
+**Objectives**: Prioritize for areas which are heavily subsidized by other planning units.
 
-**Equation**: The influx of a planning unit ${v}$ (${IF(v)}$) in a graph ${G:=(V,E)}$ with ${V}$ vertices (*i.e.* planning units) and ${E}$ edges (*i.e.* connections), let ${C=(c_{v,t})}$ be the connectivity matrix.
+**Equation**: The inflow of a planning unit ${v}$ (${IF(v)}$) in a graph ${G:=(V,E)}$ with ${V}$ vertices (*i.e.* planning units) and ${E}$ edges (*i.e.* connections), let ${C=(c_{v,t})}$ be the connectivity (probability) matrix.
 
 $${\displaystyle IF(v) = \sum_{t \ne v \in V}c_{t,v}N_t}$$
 
@@ -396,20 +417,20 @@ V(G)$metric <- colSums(AdjacencyMatrix)
 
 ggraph(as_tbl_graph(G),layout="fr") + 
     geom_edge_fan(aes(colour=weight,alpha = ..index..), start_cap = circle(4, 'mm'), end_cap = circle(4, 'mm'), edge_width = 1.25) + 
-    scale_edge_colour_gradientn("Flux Weight",colours=brewer.pal(5,"PuRd"),guide = guide_edge_colourbar(barwidth = 10))+
+    scale_edge_colour_gradientn("Flow Weight",colours=brewer.pal(5,"PuRd"),guide = guide_edge_colourbar(barwidth = 10))+
     scale_edge_alpha('Edge direction', guide = 'edge_direction') +
     geom_node_point(aes(colour = metric),size = 8) + 
-    scale_colour_gradientn(name="Influx", colours = brewer.pal(5,"YlGnBu"),guide = guide_colorbar(barwidth=10)) +
+    scale_colour_gradientn(name="Inflow", colours = brewer.pal(5,"YlGnBu"),guide = guide_colorbar(barwidth=10)) +
     theme_void() + theme(legend.position="top",legend.box="vertical")
 ```
 
-## Outflux
+## Outflow
 
-**Definition**: The outflux indicates the amount of nutrients, energy, or organisms coming out of a planning unit.
+**Definition**: The outflow indicates the amount of nutrients, energy, or organisms coming out of a planning unit.
 
 **Objectives**: Prioritize for areas which subsidize other planning units (e.g. maximize spillover).
 
-**Equation**: The influx of a planning unit ${v}$ (${OF(v)}$) in a graph ${G:=(V,E)}$ with ${V}$ vertices (*i.e.* planning units) and ${E}$ edges (*i.e.* connections), let ${C=(c_{v,t})}$ be the connectivity matrix.
+**Equation**: The inflow of a planning unit ${v}$ (${OF(v)}$) in a graph ${G:=(V,E)}$ with ${V}$ vertices (*i.e.* planning units) and ${E}$ edges (*i.e.* connections), let ${C=(c_{v,t})}$ be the connectivity (probability) matrix.
 
 $${\displaystyle OF(v) = \sum_{t \ne v \in V}c_{v,t}N_v}$$
 
@@ -434,24 +455,29 @@ V(G)$metric <- rowSums(AdjacencyMatrix)
 
 ggraph(as_tbl_graph(G),layout="fr") + 
     geom_edge_fan(aes(colour=weight,alpha = ..index..), start_cap = circle(4, 'mm'), end_cap = circle(4, 'mm'), edge_width = 1.25) + 
-    scale_edge_colour_gradientn("Flux Weight",colours=brewer.pal(5,"PuRd"),guide = guide_edge_colourbar(barwidth = 10))+
+    scale_edge_colour_gradientn("Flow Weight",colours=brewer.pal(5,"PuRd"),guide = guide_edge_colourbar(barwidth = 10))+
     scale_edge_alpha('Edge direction', guide = 'edge_direction') +
     geom_node_point(aes(colour = metric),size = 8) + 
-    scale_colour_gradientn(name="Outflux", colours = brewer.pal(5,"YlGnBu"),guide = guide_colorbar(barwidth=10)) +
+    scale_colour_gradientn(name="Outflow", colours = brewer.pal(5,"YlGnBu"),guide = guide_colorbar(barwidth=10)) +
     theme_void() + theme(legend.position="top",legend.box="vertical")
 ```
 
 ## Temporal Connectivity Covariance
 
-**Definition**: The temporal connectivity covariance indicates...
+**Definition**: The temporal connectivity covariance indicates the temporal complimentarity of planning units to existing connections within the focus area.
 
-**Objectives**: Prioritize for areas which ...
+It is only available if a connectivity 'List with Time' was provided under Demographic Input in the Connectivity Input tab as well as a focus area shapefile under the Spatial Input tab.
+
+*Warning: This metric is still experimental 'beta' phase*
+
+**Objectives**: Prioritize for areas which that increase focus area metapopulation growth and stability.
+
 
 **Equation**: The temporal connectivity covariance of a planning unit ${v}$ (${TCC(v)}$) in a graph ${G:=(V,E)}$ with ${V}$ vertices (*i.e.* planning units) and ${E}$ edges (*i.e.* connections), let ${A=(a_{v,t})}$ be the adjacency matrix
 
-$${\displaystyle TCC(v) = }$$
+$${\displaystyle TCC(v) = -\sum_{i \in E_{v,FA}} \sum_{j \in E_{FA,FA}}Cov(E_i,E_j)}$$
 
-where ${}$ is .
+where ${E(FA)}$ are the ${E}$ the link 2 planning units, both of which spatially overlap with the focus area. focus area and ${Cov()}$ is the temporal covariance.
 
 **Illustration**
 
@@ -515,7 +541,7 @@ gganimate(p,"images/temporalconnectivity.gif")
 
 **Objectives**: Prioritize for areas which are subsidized by the focus area (e.g. create stepping stones).
 
-**Equation**: The focus area recipients of a planning unit ${v}$ (${FAR(v)}$) in a graph ${G:=(V,E)}$ with ${V}$ vertices (*i.e.* planning units) and ${E}$ edges (*i.e.* connections), let ${C=(c_{v,t})}$ be the connectivity matrix.
+**Equation**: The focus area recipients of a planning unit ${v}$ (${FAR(v)}$) in a graph ${G:=(V,E)}$ with ${V}$ vertices (*i.e.* planning units) and ${E}$ edges (*i.e.* connections), let ${C=(c_{v,t})}$ be the connectivity (probability) matrix.
 
 $${\displaystyle FAR(v) = \sum_{t \ne v \in V(FA)}c_{t,v}N_t}$$
 
@@ -553,9 +579,9 @@ ggraph(as_tbl_graph(G),layout="fr") +
 
 **Definition**: The focus area donors indicates the amount of nutrients, energy, or organisms coming into the focus area from a planning unit.
 
-**Objectives**: Prioritize for areas which subsidize the focus area (e.g. create stepping stones).
+**Objectives**: Prioritize for areas which subsidize the focus area (e.g. protect demographic sources to existing protected areas).
 
-**Equation**: The focus area donors of a planning unit ${v}$ (${FAD(v)}$) in a graph ${G:=(V,E)}$ with ${V}$ vertices (*i.e.* planning units) and ${E}$ edges (*i.e.* connections), let ${C=(c_{v,t})}$ be the connectivity matrix.
+**Equation**: The focus area donors of a planning unit ${v}$ (${FAD(v)}$) in a graph ${G:=(V,E)}$ with ${V}$ vertices (*i.e.* planning units) and ${E}$ edges (*i.e.* connections), let ${C=(c_{v,t})}$ be the connectivity (probability) matrix.
 
 $${\displaystyle FAD(v) = \sum_{t \ne v \in V(FA)}c_{v,t}N_v}$$
 
@@ -595,7 +621,7 @@ ggraph(as_tbl_graph(G),layout="fr") +
 
 **Objectives**: Prioritize for areas which are least subsidized by the avoidance area (e.g. avoid connectivity for invasive species hotspots).
 
-**Equation**: The avoidance area recipients of a planning unit ${v}$ (${AAR(v)}$) in a graph ${G:=(V,E)}$ with ${V}$ vertices (*i.e.* planning units) and ${E}$ edges (*i.e.* connections), let ${C=(c_{v,t})}$ be the connectivity matrix.
+**Equation**: The avoidance area recipients of a planning unit ${v}$ (${AAR(v)}$) in a graph ${G:=(V,E)}$ with ${V}$ vertices (*i.e.* planning units) and ${E}$ edges (*i.e.* connections), let ${C=(c_{v,t})}$ be the connectivity (probability) matrix.
 
 $${\displaystyle AAR(v) = \sum_{t \ne v \in V(AA)}c_{t,v}N_t}$$
 
@@ -635,7 +661,7 @@ ggraph(as_tbl_graph(G),layout="fr") +
 
 **Objectives**: Prioritize for areas which subsidize the avoidance area (e.g. increase resilience for impacted zones).
 
-**Equation**: The avoidance area donors of a planning unit ${v}$ (${FAD(v)}$) in a graph ${G:=(V,E)}$ with ${V}$ vertices (*i.e.* planning units) and ${E}$ edges (*i.e.* connections), let ${C=(c_{v,t})}$ be the connectivity matrix.
+**Equation**: The avoidance area donors of a planning unit ${v}$ (${FAD(v)}$) in a graph ${G:=(V,E)}$ with ${V}$ vertices (*i.e.* planning units) and ${E}$ edges (*i.e.* connections), let ${C=(c_{v,t})}$ be the connectivity (probability) matrix.
 
 $${\displaystyle AAD(v) = \sum_{t \ne v \in V(AA)}c_{v,t}N_v}$$
 
@@ -674,11 +700,28 @@ ggraph(as_tbl_graph(G),layout="fr") +
 
 For some of the connectivity metrics (e.g. Temporal Connectivity Correlation, or Focus Area Donors), it is important to consider 'focus areas' for which connectivity should be optimised. Such focus areas could include existing protected areas, important habitat for endangered species, and/or otherwise important habitats for connectivity (e.g. nursery grounds, genetically unique and potentially adaptively advantageous populations). Marxan with Connectivity assumes that the planning units within the 'focus areas' will otherwise be targeted as normal conservation targets in Marxan. Loading focus areas into Marxan with Connectivity allows users to set conservation targets for the areas that complement the 'focus areas'.
 
+# Local Production
+
+The amount of nutrients, energy, or organisms produced in each planning unit
+
+# Resistance Matrix
+
+Contains habitat specific values for resistance to movement. The first column contains the home habitat IDs and the habitat IDs for habitats through which movement may occur are in the first row.
+
+|     |   Sand   |   Boulder   |   Cobble   |   Mud   |  ...  |
+|:---:|:-----:|:-----:|:-----:|:-----:|:-----:|
+|**Sand**|  1  |  30 | 15 |  2 |  ...  |
+|**Boulder**| 30 |  1  | 2 | 30 |  ...  |
+|**Cobble**|  15 | 2 |  1 |  12 |  ...  |
+|**Mud**| 2 | 30 | 12 |  1  |  ...  |
+| ... |  ...  |  ...  |  ...  |  ...  |  ...  |
+
 # Planning Units
 
-description
+Spatial subunits of the entire planning area. Can be gridded (*e.g.* hexagonal) or feature based (e.g. reefs) as in Marxan.
 
 # Shapefile
 
 A popular geospatial data format by [esri](esri.com) (e.g. ArcGIS), but is supported by many open source GIS (e.g. QGIS) and statistical programming languages (e.g. R, Python)
 
+# References
