--- a/glossary.Rmd
+++ b/glossary.Rmd
@@ -21,9 +21,9 @@ library(d3Network)
 
 # Boundary Definitions
 
-In Marxan, the boundary definitions (*i.e.* `boundary.dat`) in conjunction with the Boundary Length Modifier help achieve a solution that has a reasonable edge to area ratio. Typically these boundaries are numerically defined as the physical length of the shared shared boundary between planning units. Marxan Connect allows users to use connectivity data as boundary definitions (see @Beger2010-ir). This engourages the selection of connected networks of protected areas and minimizes the effective "edge" of the network based on movement information.
+In Marxan, the boundary definitions (*i.e.* `boundary.dat`) in conjunction with the Boundary Length Modifier help achieve a solution that has a reasonable edge to area ratio. Typically these boundaries are numerically defined as the physical length of the shared shared boundary between planning units. Marxan Connect allows users to use connectivity data as boundary definitions (see @Beger2010-ir). This encourages the selection of connected networks of protected areas and minimizes the effective "edge" of the network based on movement information.
 
-Alternatively (or in conjuction), connectivity may be incorporated into the Marxan analysis by using [Conservation Features](glossary.html#conservation_feature).
+Alternatively (or in conjunction), connectivity may be incorporated into the Marxan analysis by using [Conservation Features](glossary.html#conservation_feature).
 
 ## Connectivity as Boundary
 
@@ -80,6 +80,7 @@ The first column contains time, the second column contains the donor site IDs an
 
 
 The value column contain information about the connectivity between those sites at that particular time, but their exact value depends on whether the edge list is a [Probability](glossary.html#probability), a [Migration](glossary.html#migration), or a [Flow](glossary.html#flow) edge list
+
 ## Data Types
 
 Marxan Connect can accept different types of connectivity data:
@@ -114,7 +115,7 @@ Example Flow Matrix:
 
 ### Probability
 
-Probability represents the proportion of of nutrients, energy, or organisms produced in the donor planning unit which move to the recipient plannint unit. If there is no mortality, then rows sum to 1. 
+Probability represents the proportion of of nutrients, energy, or organisms produced in the donor planning unit which move to the recipient planning unit. If there is no mortality, then rows sum to 1. 
 
 Example Probability Matrix:
 
@@ -130,7 +131,7 @@ Example Probability Matrix:
 
 Marxan Connect can calculate various connectivity metrics that represent the process of ecological connectivity (e.g. centrality, outflow). These metrics can be used as conservation features in Marxan. 
 
-Alternatively (or in conjuction), connectivity may be incorporated into the Marxan analysis by using [Boundary Definitions](glossary.html#boundary_definitions).
+Alternatively (or in conjunction), connectivity may be incorporated into the Marxan analysis by using [Boundary Definitions](glossary.html#boundary_definitions).
 
 ## In Degree
 
@@ -464,7 +465,7 @@ ggraph(as_tbl_graph(G),layout="fr") +
 
 ## Temporal Connectivity Covariance
 
-**Definition**: The temporal connectivity covariance indicates the temporal complimentarity of planning units to existing connections within the focus area.
+**Definition**: The temporal connectivity covariance indicates the temporal complementarity of planning units to existing connections within the focus area.
 
 It is only available if a connectivity 'List with Time' was provided under Demographic Input in the Connectivity Input tab as well as a focus area shapefile under the Spatial Input tab.
 
